feat: change the code for the production

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,23 +1,43 @@
-# Server
+# ============================================================
+# SERVER CONFIGURATION
+# ============================================================
+# DEVELOPMENT: Use NODE_ENV=development
+# PRODUCTION: Use NODE_ENV=production
 PORT=3001
 NODE_ENV=development
 
-# PostgreSQL
+# ============================================================
+# DATABASE CONFIGURATION
+# ============================================================
+# DEVELOPMENT: Usually localhost
+# PRODUCTION: Your VPS database settings
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=mundomascotix_chatbot
 DB_USER=postgres
 DB_PASSWORD=your_password_here
 
-# OpenAI
+# ============================================================
+# OPENAI CONFIGURATION
+# ============================================================
 OPENAI_API_KEY=sk-your-key-here
 OPENAI_MODEL=gpt-4o
 OPENAI_MAX_TOKENS=800
 OPENAI_TEMPERATURE=0.4
 
-# Frontend URL (CORS)
+# ============================================================
+# FRONTEND URL (CORS)
+# ============================================================
+# DEVELOPMENT: http://localhost:5173 (Vite dev server)
+# PRODUCTION: http://your-vps-ip:3001 or https://your-domain.com
+#             (if serving frontend from backend)
 FRONTEND_URL=http://localhost:5173
 
-# PrestaShop (optional - for live catalog sync)
+# ============================================================
+# PRESTASHOP CONFIGURATION
+# ============================================================
+# DEVELOPMENT: Optional (not needed for local dev)
+# PRODUCTION: Required for CORS and optional catalog sync
+# This is the domain where PrestaShop is hosted
 PRESTASHOP_URL=https://mundomascotix.com
 PRESTASHOP_API_KEY=your_prestashop_api_key
