--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "node --watch src/index.js",
+    "test": "node test-bot.js",
+    "test:services": "node test-services.js",
     "db:init": "node src/db/init.js",
     "import:products": "node src/scripts/importProducts.js",
     "import:clinics": "node src/scripts/importClinics.js",
